# tps43-experiments

./: Cargo.toml  flake.nix
.cargo/: config.toml
src/: blinker.rs  logger.rs  main.rs  read_task.rs  usb_hid.rs  vibrator.rs
src/references/: blinky.rs
