[package]
name    = "tps43-experiments"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
embassy-executor = "0.9.0"
embassy-time = "0.5.0"
esp-backtrace = { version = "0.18.1", features = [
    "panic-handler",
    "println",
    "esp32c3",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
esp-hal = { version = "1.0.0", features = ["log-04", "unstable", "esp32c3"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "log-04", "esp32c3"] }
esp-println = { version = "0.16.1", features = ["log-04"] }

[profile.release]
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1
